--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TypeScript typings for the core stream library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc test/test.ts --module commonjs"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/weswigham/typed-stream#readme",
   "dependencies": {
-    "typed-events": "1.0.0"
+    "typed-events": "^1.0.0",
+    "typed-node": "^1.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^1.6.0-beta"
   }
 }
